--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -2529,7 +2529,7 @@
     <string name="accessibility_shortcuts_settings_title" msgid="974740249671825145">"ಪ್ರವೇಶಿಸುವಿಕೆ ಶಾರ್ಟ್‌ಕಟ್‌ಗಳು"</string>
     <string name="enable_quick_setting" msgid="6648073323202243604">"ತ್ವರಿತ ಸೆಟ್ಟಿಂಗ್‌‌ಗಳಲ್ಲಿ ತೋರಿಸು"</string>
     <string name="daltonizer_mode_deuteranomaly_title" msgid="4210949400493358650">"ಕೆಂಪು-ಹಸಿರು"</string>
-    <string name="daltonizer_mode_protanomaly_title" msgid="6392456967103014723">"ಕೆಂಪು-ಹಸಿರು ಬಣ್ಣದ ದೃಷ್ಟಿಹೀನತೆ"</string>
+    <string name="daltonizer_mode_protanomaly_title" msgid="6392456967103014723">"ಕೆಂಪು-ಹಸಿರು"</string>
     <string name="daltonizer_mode_tritanomaly_title" msgid="2278786218762602022">"ನೀಲಿ-ಹಳದಿ"</string>
     <string name="daltonizer_mode_grayscale_title" msgid="152005391387952588">"ಗ್ರೇಸ್ಕೇಲ್"</string>
     <string name="daltonizer_mode_deuteranomaly_summary" msgid="2117727423019598455">"ಹಸಿರು ಬಣ್ಣದ ದೃಷ್ಟಿಹೀನತೆ, ಡ್ಯುಟೆರೊನೊಮಲಿ"</string>
@@ -2541,7 +2541,7 @@
     <string name="reduce_bright_colors_about_title" msgid="503655452544934393">"ಇನ್ನಷ್ಟು ಮಬ್ಬಾಗಿಸುವ ಕುರಿತು"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"ನಿಮ್ಮ ಫೋನ್‌ನ ಕನಿಷ್ಠ ಪ್ರಖರತೆಗಿಂತ ಮಬ್ಬಾಗಿಸಿ"</string>
     <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌ನ ಕನಿಷ್ಠ ಪ್ರಖರತೆಗಿಂತ ಮಬ್ಬಾಗಿಸಿ"</string>
-    <string name="reduce_bright_colors_preference_intro_text" msgid="3502290826747650566">"ನಿಮ್ಮ ಸ್ಕ್ರೀನ್ ಅನ್ನು ಮಂದಗೊಳಿಸಿ ಇದರಿಂದ ಓದಲು ಹೆಚ್ಚು ಆರಾಮದಾಯಕವಾಗಿರುತ್ತದೆ"</string>
+    <string name="reduce_bright_colors_preference_intro_text" msgid="3502290826747650566">"ನಿಮ್ಮ ಸ್ಕ್ರೀನ್ ಅನ್ನು ಮಂದಗೊಳಿಸಿ, ಇದರಿಂದ ಓದಲು ಹೆಚ್ಚು ಆರಾಮದಾಯಕವಾಗಿರುತ್ತದೆ"</string>
     <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="8573408446901659333">"ಇನ್ನಷ್ಟು ಮಬ್ಬು ಮಾಡುವ ಫೀಚರ್ ಈ ಸಂದರ್ಭಗಳಲ್ಲಿ ಸಹಾಯಕವಾಗಿರುತ್ತದೆ: &lt;ol&gt; &lt;li&gt; ನಿಮ್ಮ ಫೋನ್‌ನ ಕನಿಷ್ಠ ಡೀಫಾಲ್ಟ್ ಪ್ರಖರತೆಯು ಹೆಚ್ಚು ಪ್ರಖರವಾಗಿದ್ದಾಗ&lt;/li&gt; &lt;li&gt; ನೀವು ನಿಮ್ಮ ಫೋನ್ ಅನ್ನು ಕತ್ತಲೆಯಲ್ಲಿ ಬಳಸುವಾಗ ಉದಾ. ನಿಮ್ಮ ಹಾಸಿಗೆಯ ಬಳಿ ಅಥವಾ ಕತ್ತಲೆ ಕೋಣೆಯಲ್ಲಿ&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="reduce_bright_colors_preference_subtitle" product="tablet" msgid="5158211121482010799">"ಇನ್ನಷ್ಟು ಮಬ್ಬು ಮಾಡುವ ಫೀಚರ್ ಈ ಸಂದರ್ಭಗಳಲ್ಲಿ ಸಹಾಯಕವಾಗಿರುತ್ತದೆ; ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌ನ ಕನಿಷ್ಠ ಡೀಫಾಲ್ಟ್ ಪ್ರಖರತೆಯು ಹೆಚ್ಚು ಪ್ರಖರವಾಗಿದ್ದಾಗ&lt;/li&gt; &lt;li&gt; ನೀವು ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್ ಅನ್ನು ಕತ್ತಲೆಯಲ್ಲಿ ಬಳಸುವಾಗ ಉದಾ. ನಿಮ್ಮ ಹಾಸಿಗೆಯ ಬಳಿ ಅಥವಾ ಕತ್ತಲೆ ಕೋಣೆಯಲ್ಲಿ&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="reduce_bright_colors_intensity_preference_title" msgid="7455443033955118267">"ತೀವ್ರತೆ"</string>
@@ -5698,8 +5698,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"ಸ್ಥಳ ಪ್ರವೇಶ"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"ಆ್ಯಪ್‌ಗಳು ಮತ್ತು ಸೇವೆಗಳಿಗಾಗಿ"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"ಆ್ಯಪ್‌ಗಳು ಮತ್ತು ಸೇವೆಗಳಿಗಾಗಿ. ಈ ಸೆಟ್ಟಿಂಗ್ ಆಫ್ ಆಗಿದ್ದರೆ, ನೀವು ತುರ್ತು ಸಂಖ್ಯೆಗೆ ಕರೆ ಮಾಡಿದಾಗಲೂ ಮೈಕ್ರೊಫೋನ್ ಡೇಟಾವನ್ನು ಹಂಚಿಕೊಳ್ಳಬಹುದು."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"ಗೇಮ್ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"ಗೇಮ್ ಡ್ಯಾಶ್‌ಬೋರ್ಡ್ ಶಾರ್ಟ್‌ಕಟ್ ಆನ್ ಮಾಡಿ ಮತ್ತು ಇನ್ನಷ್ಟು"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"ಹಿಂದಿನದು"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"ಮುಂದಿನದು"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"ಬಣ್ಣ ಪೂರ್ವವೀಕ್ಷಣೆ"</string>
