--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -1638,7 +1638,7 @@
     <string name="storage_internal_forget_details" msgid="5606507270046186691">"<xliff:g id="NAME">^1</xliff:g>-ийн агуулж байгаа апп, зураг, өгөгдлийг ашиглахын тулд дахин оруулна уу. \n\nТөхөөрөмжийг ашиглах боломжгүй байгаа тохиолдолд санах ойг мартах энэхүү сонголтыг хийж болно. \n\nМартах сонголт хийсэн бол төхөөрөмжийн агуулж буй өгөгдөл бүгд устах болно. \n\nДараа нь аппыг дахин суулгаж болох ч төхөөрөмжид хадгалсан өгөгдөл устахыг анхаарна уу."</string>
     <string name="storage_internal_forget_confirm_title" msgid="379238668153099015">"<xliff:g id="NAME">^1</xliff:g>-г мартах уу?"</string>
     <string name="storage_internal_forget_confirm" msgid="5752634604952674123">"<xliff:g id="NAME">^1</xliff:g> дээр хадгалсан бүх апп, зураг, өгөгдөл тэр чигтээ устах болно."</string>
-    <string name="storage_detail_dialog_system" msgid="7461009051858709479">"Систем Андройдын <xliff:g id="VERSION">%s</xliff:g> хувилбарыг ажиллуулахад ашиглаж байсан файл зэргийг агуулдаг"</string>
+    <string name="storage_detail_dialog_system" msgid="7461009051858709479">"Систем Андройдын <xliff:g id="VERSION">%s</xliff:g> хувилбарыг ажиллуулахад ашигладаг файлуудыг агуулдаг"</string>
     <string name="storage_wizard_init_title" msgid="9036374223934708619">"<xliff:g id="NAME">^1</xliff:g>-аа тохируул"</string>
     <string name="storage_wizard_init_external_title" msgid="6540132491909241713">"Зөөврийн санах хэлбэрээр ашиглах"</string>
     <string name="storage_wizard_init_external_summary" msgid="5807552934494462984">"Төхөөрөмж хооронд зураг болон бусад медиаг зөөвөрлөхөд зориулсан."</string>
@@ -2046,7 +2046,7 @@
     <string name="screen_compatibility_label" msgid="7549658546078613431">"Дэлгэцийн нийцэл"</string>
     <string name="permissions_label" msgid="1708927634370314404">"Зөвшөөрөл"</string>
     <string name="cache_header_label" msgid="2441967971921741047">"Завсрын санах ой"</string>
-    <string name="clear_cache_btn_text" msgid="8597272828928143723">"Кешийг арилгах"</string>
+    <string name="clear_cache_btn_text" msgid="8597272828928143723">"Завсрын санах ой цэвэрлэх"</string>
     <string name="cache_size_label" msgid="313456088966822757">"Завсрын санах ой"</string>
     <plurals name="uri_permissions_text" formatted="false" msgid="8212425823423508096">
       <item quantity="other">%d зүйлс</item>
@@ -2378,9 +2378,9 @@
     <string name="accessibility_shortcut_edit_dialog_summary_software_gesture_talkback" msgid="84483464524360845">"Дэлгэцийн доороос дээш 3 хуруугаар шударна уу.\n\nОнцлогуудын хооронд сэлгэхийн тулд 3 хуруугаар дээш шудраад удаан дарна уу."</string>
     <string name="accessibility_shortcut_edit_dialog_summary_software_floating" msgid="4459254227203203324"><annotation id="link">"Бусад сонголт"</annotation></string>
     <string name="footer_learn_more_content_description" msgid="8843798273152131341">"<xliff:g id="SERVICE">%1$s</xliff:g>-н талаар нэмэлт мэдээлэл авах"</string>
-    <string name="accessibility_shortcut_edit_dialog_title_hardware" msgid="2356853121810443026">"Дууны түвшний түлхүүрийг удаан дарах"</string>
+    <string name="accessibility_shortcut_edit_dialog_title_hardware" msgid="2356853121810443026">"Дууны түвшний товчийг удаан дарах"</string>
     <string name="accessibility_shortcut_hardware_keyword" msgid="3921915304537166064">"дууны түвшний түлхүүрийг удаан дарах"</string>
-    <string name="accessibility_shortcut_edit_dialog_summary_hardware" msgid="2503134386397991634">"Дууны түвшний хоёр түлхүүрийг зэрэг удаан дарна уу"</string>
+    <string name="accessibility_shortcut_edit_dialog_summary_hardware" msgid="2503134386397991634">"Дууны түвшний хоёр товчийг зэрэг удаан дарна уу"</string>
     <string name="accessibility_shortcut_edit_dialog_title_triple_tap" msgid="6672798007229795841">"Дэлгэцийг гурав товших"</string>
     <string name="accessibility_shortcut_triple_tap_keyword" msgid="6863958573135995927">"дэлгэцийг гурав товших"</string>
     <string name="accessibility_shortcut_edit_dialog_summary_triple_tap" msgid="2102327956423320536">"Дэлгэцийг {0,number,integer} удаа хурдан товшино уу. Энэ товчлол таны төхөөрөмжийг удаашруулж магадгүй."</string>
@@ -2415,7 +2415,7 @@
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"Дэлгэц томруулахыг автоматаар шинэчлэх"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"Апп шилжилт дээр дэлгэц томруулахыг шинэчлэх"</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"Асаах товч дуудлагыг тасална"</string>
-    <string name="accessibility_toggle_large_pointer_icon_title" msgid="5508351959249876801">"Том хулгана заагч"</string>
+    <string name="accessibility_toggle_large_pointer_icon_title" msgid="5508351959249876801">"Хулганын том заагч"</string>
     <string name="accessibility_toggle_large_pointer_icon_summary" msgid="1480527946039237705">"Хулганын заагчийг илүү мэдэгдэхүйц болгох"</string>
     <string name="accessibility_disable_animations" msgid="2993529829457179058">"Анимацийг устгах"</string>
     <string name="accessibility_disable_animations_summary" msgid="5828228669556554565">"Дэлгэц дээрх хөдөлгөөнийг багасгах"</string>
@@ -2440,7 +2440,7 @@
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"Өнгө хувиргалтыг ашиглах"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"Өнгө урвуулах товчлол"</string>
     <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"Өнгө урвуулах онцлог нь цайвар дэлгэцийг бараан болгоно. Энэ нь мөн бараан дэлгэцийг цайвар болгоно."</string>
-    <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;Анхаарна ууd&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; Медиа болон зураг дахь өнгөнүүд өөрчлөгдөнө&lt;/li&gt; &lt;li&gt; Өнгө урвуулах онцлог нь бүх апп дээр ажиллана&lt;/li&gt; &lt;li&gt; Бараан дэвсгэрийг үзүүлэхийн тулд оронд нь Бараан загварыг ашиглах боломжтой&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;Анхаарна уу&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; Медиа болон зураг дахь өнгөнүүд өөрчлөгдөнө&lt;/li&gt; &lt;li&gt; Өнгө урвуулах онцлог нь бүх апп дээр ажиллана&lt;/li&gt; &lt;li&gt; Бараан дэвсгэрийг үзүүлэхийн тулд оронд нь Бараан загварыг ашиглах боломжтой&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Автомат товшилт (тодорхой хугацаатай)"</string>
     <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"Автомат товшилтын талаар (тодорхой хугацаа)"</string>
     <string name="accessibility_autoclick_footer_learn_more_content_description" msgid="7056189627042350691">"Автомат товшилтын талаар нэмэлт мэдээлэл авах (тодорхой хугацаа)"</string>
@@ -2499,7 +2499,7 @@
     <string name="accessibility_caption_preference_summary" msgid="632875702223135121">"Эдгээр тайлбарын тохиргоог бүх медиа апп дэмждэггүй"</string>
     <string name="accessibility_shortcut_type_software" msgid="2552732582767687515">"Хандалтын товчлуур"</string>
     <string name="accessibility_shortcut_type_software_gesture" msgid="5608959693931019059">"Доод талаас нь 2 хуруугаар дээш шувтрах"</string>
-    <string name="accessibility_shortcut_type_hardware" msgid="4834144210432451916">"Дууны түвшний түлхүүрийг удаан дарах"</string>
+    <string name="accessibility_shortcut_type_hardware" msgid="4834144210432451916">"Дууны түвшний товчийг удаан дарах"</string>
     <string name="accessibility_shortcut_type_triple_tap" msgid="7717524216825494543">"Дэлгэцийг гурав товших"</string>
     <string name="accessibility_hearingaid_instruction_continue_button" msgid="3367260988024430722">"Үргэлжлүүлэх"</string>
     <string name="accessibility_hearingaid_title" msgid="427173678199203191">"Сонсголын төхөөрөмжүүд"</string>
@@ -2541,7 +2541,7 @@
     <string name="reduce_bright_colors_about_title" msgid="503655452544934393">"Хэт бүүдгэр онцлогийн тухай"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Дэлгэцийг таны утасны хамгийн бага гэрэлтүүлгээс бүүдгэр болгох"</string>
     <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"Дэлгэцийг таны таблетын хамгийн бага гэрэлтүүлгээс бүүдгэр болгох"</string>
-    <string name="reduce_bright_colors_preference_intro_text" msgid="3502290826747650566">"Таны дэлгэц илүү бүүдгэр байгаа эсэхийг баталгаажуулснаар энэ нь уншихад илүү тухтай байна"</string>
+    <string name="reduce_bright_colors_preference_intro_text" msgid="3502290826747650566">"Дэлгэцээ бүүдгэр болгосноор уншихад илүү тухтай болно"</string>
     <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="8573408446901659333">"Хэт бүүдгэр онцлог нь дараах тохиолдолд хэрэгтэй байж болно: &lt;ol&gt; &lt;li&gt; Таны утасны өгөгдмөл хамгийн бага гэрэлтүүлэг хэт тод хэвээр байх үед&lt;/li&gt; &lt;li&gt; Та шөнө, эсвэл орондоо орохоосоо өмнө харанхуй өрөөнд байх зэргээр харанхуй нөхцөл байдалд утсаа ашиглаж байгаа үед&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="reduce_bright_colors_preference_subtitle" product="tablet" msgid="5158211121482010799">"Хэт бүүдгэр онцлог нь дараах тохиолдолд хэрэгтэй байж болно: &lt;ol&gt; &lt;li&gt; Таны таблетын өгөгдмөл хамгийн бага гэрэлтүүлэг хэт тод хэвээр байх үед&lt;/li&gt; &lt;li&gt; Та шөнө, эсвэл орондоо орохоосоо өмнө харанхуй өрөөнд байх зэргээр харанхуй нөхцөл байдалд таблетаа ашиглаж байгаа үед&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="reduce_bright_colors_intensity_preference_title" msgid="7455443033955118267">"Нэвчилт"</string>
@@ -2611,7 +2611,7 @@
     <string name="accessibility_dialog_button_stop" msgid="7295448112784528196">"Зогсоох"</string>
     <string name="accessibility_dialog_button_cancel" msgid="4813234247237851121">"Цуцлах"</string>
     <string name="disable_service_title" msgid="2909108731776956167">"<xliff:g id="SERVICE">%1$s</xliff:g>-г зогсоох уу?"</string>
-    <string name="disable_service_message" msgid="4814173941688548016">"<xliff:g id="STOP">%1$s</xliff:g>-г товшисноор <xliff:g id="SERVICE">%2$s</xliff:g>-г зогсооно."</string>
+    <string name="disable_service_message" msgid="4814173941688548016">"<xliff:g id="STOP">%1$s</xliff:g>-г товшсоноор <xliff:g id="SERVICE">%2$s</xliff:g>-г зогсооно."</string>
     <string name="accessibility_no_services_installed" msgid="3725569493860028593">"Үйлчилгээ суулгагдаагүй байна"</string>
     <string name="accessibility_no_service_selected" msgid="1310596127128379897">"Үйлчилгээ сонгоогүй байна"</string>
     <string name="accessibility_service_default_description" msgid="7801435825448138526">"Тайлбар байхгүй."</string>
@@ -5698,8 +5698,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Байршилд хандах"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Апп болон үйлчилгээнд"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Апп болон үйлчилгээнд. Энэ тохиргоо унтраалттай тохиолдолд та яаралтай тусламжийн утасны дугаар луу залгах үедээ микрофоны өгөгдлийг хуваалцсан хэвээр байж болзошгүй."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Тоглоомын тохиргоо"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Тоглоомын хяналтын самбарын товчлол болон бусад зүйлийг асаана уу"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Өмнөх"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Дараах"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Өнгийг урьдчилан үзэх"</string>
