--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -2330,7 +2330,7 @@
     <string name="accessibility_settings" msgid="4713215774904704682">"Спеціальні можливості"</string>
     <string name="accessibility_settings_title" msgid="6739115703615065716">"Налаштування доступності"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"Дисплей, взаємодія, аудіо"</string>
-    <string name="vision_settings_title" msgid="8919983801864103069">"Спеціальні можливості"</string>
+    <string name="vision_settings_title" msgid="8919983801864103069">"Налаштування для зору"</string>
     <string name="vision_settings_description" msgid="7614894785054441991">"Ви можете налаштувати цей пристрій для своїх потреб. Ці спеціальні можливості можна пізніше змінити в налаштуваннях."</string>
     <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"Змінити розмір шрифту"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"Програма зчитування з екрана"</string>
@@ -2487,7 +2487,7 @@
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"Інверсія кольорів"</string>
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"Використовувати інверсію кольорів"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"Швидкий запуск інверсії кольорів"</string>
-    <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"Інверсія кольорів перетворює світлі кольори на темні, та навпаки."</string>
+    <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"Інверсія кольорів перетворює світлі кольори на темні та навпаки."</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;Зверніть увагу&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; Інверсія також змінить кольори зображень і мультимедійного контенту&lt;/li&gt; &lt;li&gt; Інверсія кольорів вплине на всі додатки&lt;/li&gt; &lt;li&gt; Якщо потрібно зробити фон інтерфейсу не таким яскравим, натомість увімкніть Темну тему&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Автоматичне натискання (час взаємодії)"</string>
     <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"Про авт. натискання (час взаємодії)"</string>
@@ -2501,7 +2501,7 @@
     <string name="accessibility_autoclick_medium_summary" msgid="1343390686514222871">"0,6 секунди"</string>
     <string name="accessibility_autoclick_long_title" msgid="6799311820641687735">"Довге"</string>
     <string name="accessibility_autoclick_long_summary" msgid="3747153151313563637">"1 секунда"</string>
-    <string name="accessibility_autoclick_custom_title" msgid="4597792235546232038">"Інший"</string>
+    <string name="accessibility_autoclick_custom_title" msgid="4597792235546232038">"Інше"</string>
     <string name="accessibility_autoclick_shorter_desc" msgid="7631013255724544348">"Коротше"</string>
     <string name="accessibility_autoclick_longer_desc" msgid="2566025502981487443">"Довше"</string>
     <string name="accessibility_autoclick_seekbar_desc" msgid="8363959277814621118">"Час автоматичного натискання"</string>
@@ -3800,7 +3800,7 @@
     <string name="vibrate_when_ringing_option_always_vibrate" msgid="968652667232075466">"Постійна вібрація"</string>
     <string name="vibrate_when_ringing_option_ramping_ringer" msgid="2798848945803840348">"Вібрація, тоді дзвінок, що гучнішає"</string>
     <string name="other_sound_settings" msgid="5468360269346162072">"Інші звуки"</string>
-    <string name="spatial_audio_title" msgid="6591051622375191603">"Просторовий звук"</string>
+    <string name="spatial_audio_title" msgid="6591051622375191603">"Просторове звучання"</string>
     <string name="dial_pad_tones_title" msgid="3536945335367914892">"Звуки цифрової клавіатури"</string>
     <string name="screen_locking_sounds_title" msgid="5695030983872787321">"Звук блокування екрана"</string>
     <string name="charging_sounds_title" msgid="5261683808537783668">"Звук і вібрація для заряджання"</string>
@@ -5876,8 +5876,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Доступ до геоданих"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Для додатків і сервісів"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Для додатків і сервісів. Якщо це налаштування вимкнено, дані мікрофона можуть усе одно передаватися під час виклику екстреного номера."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Налаштування ігор"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Увімкнути ярлик ігрової панелі тощо"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Назад"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Далі"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Попередній перегляд кольору"</string>
