--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -1043,7 +1043,7 @@
     <string name="wifi_subscription_summary" msgid="18802471063384598">"Consulta ou cambia a subscrición"</string>
     <string name="wifi_privacy_settings_ephemeral_summary" msgid="8502084692297249372">"Enderezo MAC aleatorio"</string>
     <string name="wifi_dpp_add_device_to_network" msgid="6141246783457722976">"Engadir un dispositivo"</string>
-    <string name="wifi_dpp_center_qr_code" msgid="5270782275746178104">"Centra o código QR que aparece debaixo para engadir o dispositivo a “<xliff:g id="SSID">%1$s</xliff:g>”"</string>
+    <string name="wifi_dpp_center_qr_code" msgid="5270782275746178104">"Centra o código QR no cadro de abaixo para engadir o dispositivo a “<xliff:g id="SSID">%1$s</xliff:g>”"</string>
     <string name="wifi_dpp_scan_qr_code" msgid="3543923817779444434">"Escanear código QR"</string>
     <string name="wifi_dpp_scan_qr_code_join_network" msgid="969985020363459133">"Centra o código QR que aparece debaixo para establecer conexión con “<xliff:g id="SSID">%1$s</xliff:g>”"</string>
     <string name="wifi_dpp_scan_qr_code_join_unknown_network" msgid="3180020429793614145">"Conéctate á wifi escaneando un código QR"</string>
@@ -1794,7 +1794,7 @@
     <string name="tether_settings_title_wifi" msgid="4327056146425282159">"Zona wifi portátil"</string>
     <string name="tether_settings_title_bluetooth" msgid="8878813702520141084">"Conexión por Bluetooth"</string>
     <string name="tether_settings_title_usb_bluetooth" msgid="4437274151658505496">"Conexión compartida"</string>
-    <string name="tether_settings_title_all" msgid="6807525590937697228">"Zona wifi/conexión compartida"</string>
+    <string name="tether_settings_title_all" msgid="6807525590937697228">"Zona wifi e conexión compartida"</string>
     <string name="tether_settings_summary_hotspot_on_tether_on" msgid="6110241048260139633">"Zona wifi e conexión compartida activadas"</string>
     <string name="tether_settings_summary_hotspot_on_tether_off" msgid="5057598961245943644">"Zona wifi activada"</string>
     <string name="tether_settings_summary_hotspot_off_tether_on" msgid="7181518138494995888">"Conexión compartida activada"</string>
@@ -2293,7 +2293,7 @@
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Cor e movemento"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"Escurecer pantalla"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"Controis de interacción"</string>
-    <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"Controis de sincronización"</string>
+    <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"Controis de tempo"</string>
     <string name="accessibility_system_controls_title" msgid="6403287349518987624">"Controis do sistema"</string>
     <string name="user_installed_services_category_title" msgid="2639470729311439731">"Aplicacións descargadas"</string>
     <string name="experimental_category_title" msgid="898904396646344152">"Experimental"</string>
@@ -2366,7 +2366,7 @@
     <string name="accessibility_tutorial_dialog_message_gesture_settings" msgid="40769674586981429">"Pasa 2 dedos cara arriba desde a parte inferior da pantalla para utilizar unha función de accesibilidade.\n\nPara cambiar de función, pasa 2 dedos cara arriba e mantén premida a pantalla."</string>
     <string name="accessibility_tutorial_dialog_message_gesture_settings_talkback" msgid="7292969929578621958">"Pasa 3 dedos cara arriba desde a parte inferior da pantalla para utilizar unha función de accesibilidade.\n\nPara cambiar de función, pasa 3 dedos cara arriba e mantén premida a pantalla."</string>
     <string name="accessibility_tutorial_dialog_button" msgid="2031773187678948436">"Entendido"</string>
-    <string name="accessibility_shortcut_title" msgid="8125867833704517463">"<xliff:g id="SERVICE">%1$s</xliff:g>: atallo"</string>
+    <string name="accessibility_shortcut_title" msgid="8125867833704517463">"Atallo de <xliff:g id="SERVICE">%1$s</xliff:g>"</string>
     <string name="accessibility_shortcut_edit_summary_software" msgid="6405629977940618205">"Botón Accesibilidade"</string>
     <string name="accessibility_shortcut_edit_summary_software_gesture" msgid="5489284264414421286">"Xesto de accesibilidade"</string>
     <string name="accessibility_shortcut_edit_dialog_title_software_gesture" msgid="8078659880723370597">"Pasa 2 dedos cara arriba"</string>
@@ -2433,7 +2433,7 @@
     <string name="accessibility_control_timeout_about_title" msgid="813588002683460837">"Acerca do tempo para actuar (tempo de espera de accesibilidade)"</string>
     <string name="accessibility_control_timeout_footer_learn_more_content_description" msgid="8118584413220542193">"Máis información acerca do tempo para actuar (tempo de espera de accesibilidade)"</string>
     <string name="accessibility_control_timeout_preference_title" msgid="1443940538597464758">"Tempo para actuar"</string>
-    <string name="accessibility_control_timeout_preference_summary" msgid="4037051091059316310">"Non todas as aplicacións admiten esta preferencia de sincronización"</string>
+    <string name="accessibility_control_timeout_preference_summary" msgid="4037051091059316310">"Non todas as aplicacións admiten esta preferencia de tempo"</string>
     <string name="accessibility_control_timeout_preference_intro_text" msgid="1398116710556762245">"Escolle o tempo durante o que se mostran as mensaxes temporais que che piden que realices algunha acción"</string>
     <string name="accessibility_long_press_timeout_preference_title" msgid="5237764682976688855">"Retardo de pulsación prolongada"</string>
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"Inversión da cor"</string>
@@ -3027,8 +3027,8 @@
     <string name="vpn_settings_multiple_insecure_multiple_total" msgid="1706236062478680488">"<xliff:g id="VPN_COUNT">%d</xliff:g> non seguras"</string>
     <string name="adaptive_connectivity_title" msgid="7464959640138428192">"Conectividade intelixente"</string>
     <string name="adaptive_connectivity_summary" msgid="3648731530666326885">"Aumenta a duración da batería e mellora o rendemento do dispositivo xestionando automaticamente as conexións de rede"</string>
-    <string name="adaptive_connectivity_switch_on" msgid="3653067561620745493">"Opción activada"</string>
-    <string name="adaptive_connectivity_switch_off" msgid="5076172560836115265">"Opción desactivada"</string>
+    <string name="adaptive_connectivity_switch_on" msgid="3653067561620745493">"Activada"</string>
+    <string name="adaptive_connectivity_switch_off" msgid="5076172560836115265">"Desactivada"</string>
     <string name="credentials_title" msgid="7535942196886123656">"Almacenamento de credenciais"</string>
     <string name="credentials_install" msgid="3933218407598415827">"Instalar un certificado"</string>
     <string name="credentials_install_summary" product="nosdcard" msgid="6644116499934553975">"Instala certificados desde o almacenamento"</string>
@@ -5698,8 +5698,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Acceso á localización"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Para aplicacións e servizos"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Para aplicacións e servizos. Aínda que esta opción de configuración se atope desactivada, poderán compartirse datos do micrófono se chamas a un número de emerxencias."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Configuración para xogos"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Activa o atallo ao panel de xogo e moito máis"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Anterior"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Seguinte"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Vista previa da cor"</string>
