--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -2333,15 +2333,15 @@
     <string name="accessibility_screen_magnification_navbar_title" msgid="480853328665484528">"Խոշորացում դյուրանցման միջոցով"</string>
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"Խոշորացնել դյուրանցման կամ եռակի հպելու օգնությամբ"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"«<xliff:g id="SERVICE">%1$s</xliff:g>» ծառայության մասին"</string>
-    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"Ցուցադրման չափը և տեքստի կարգավորումներ"</string>
+    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"Ցուցադրման չափսը և տեքստը"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Կարգավորեք տեքստի ցուցադրումը"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Թեմա՝ Օդապարիկների ձևավորումներ"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Ումից՝ Բիլ"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Բարի լույս։\n\nՊարզապես ուզում էի իմանալ՝ ինչպես են ընթանում ձևավորման աշխատանքները։ Դրանք պատրաստ կլինե՞ն, նախքան մենք կսկսենք մշակել նոր օդապարիկները։"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Բարի լույս։\n\nԻնչպե՞ս են ընթանում ձևավորման աշխատանքները։ Դրանք ավարտված կլինե՞ն, նախքան կսկսենք մշակել նոր օդապարիկները։"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Զրոյացնել կարգավորումները"</string>
-    <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Վերակայե՞լ ցուցադրման չափսը և տեքստի նախընտրանքները"</string>
-    <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Ցուցադրման չափսը և տեքստի նախընտրանքները կվերակայվեն, և կվերականգնվեն հեռախոսի սկզբնական կարգավորումները։"</string>
-    <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"Վերակայել"</string>
+    <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Զրոյացնե՞լ ցուցադրման չափսի և տեքստի կարգավորումները"</string>
+    <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Կվերականգնվեն ցուցադրման չափսի և տեքստի կարգավորումների սկզբնական կարգավորումները։"</string>
+    <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"Զրոյացնել"</string>
     <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"Որևէ բան պլանավորե՞լ եք հանգստյան օրերի համար։"</string>
     <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"Գնում ենք լողափ։ Կմիանա՞ք մեզ։"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"Ընտրանքներ"</string>
@@ -2440,7 +2440,7 @@
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"Օգտագործել գունաշրջումը"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"Գունաշրջման դյուրանցում"</string>
     <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"Գունաշրջումը էկրանի բաց գույները դարձնում է մուգ, իսկ մուգ գույները՝ բաց։"</string>
-    <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;Նկատի առեք&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; Մեդիայի և պատկերների գույները կփոխվեն&lt;/li&gt; &lt;li&gt; Գունաշրջումը գործում է բոլոր հավելվածներում&lt;/li&gt; &lt;li&gt; Մուգ ֆոն ստանալու համար գունաշրջման փոխարեն կարելի է օգտագործել մուգ թեման&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;Նկատի առեք&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; Կփոխվեն մեդիա բովանդակության և պատկերների գույները&lt;/li&gt; &lt;li&gt; Գունաշրջումը գործում է բոլոր հավելվածներում&lt;/li&gt; &lt;li&gt; Մուգ ֆոն ստանալու համար գունաշրջման փոխարեն կարելի է օգտագործել մուգ թեման&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Ավտոմատ սեղմում (հապաղման ժամանակը)"</string>
     <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"Ավտոմատ սեղմում (հապաղման ժամանակը)"</string>
     <string name="accessibility_autoclick_footer_learn_more_content_description" msgid="7056189627042350691">"Իմացեք ավելին ավտոմատ սեղմման հապաղման ժամանակի մասին"</string>
@@ -2541,9 +2541,9 @@
     <string name="reduce_bright_colors_about_title" msgid="503655452544934393">"Հավելյալ խամրեցում"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Ավելի խամրեցնել հեռախոսի էկրանը, քան նվազագույն պայծառության դեպքում"</string>
     <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"Ավելի խամրեցնել պլանշետի էկրանը, քան նվազագույն պայծառության դեպքում"</string>
-    <string name="reduce_bright_colors_preference_intro_text" msgid="3502290826747650566">"Խամրեցրեք էկրանը՝ ավելի հարմար ընթերցման համար"</string>
-    <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="8573408446901659333">"Հավելյալ խամրեցումը կարող է օգնել, երբ՝ &lt;ol&gt; &lt;li&gt; Նվազագույն պայծառության ժամանակ հեռախոսի էկրանը դեռ շատ պայծառ է։t&lt;/li&gt; &lt;li&gt; Դուք օգտագործում եք հեռախոսը մթության մեջ, օրինակ, գիշերը կամ մութ սենյակում՝ քնելուց առաջ։&lt;/li&gt; &lt;/ol&gt;"</string>
-    <string name="reduce_bright_colors_preference_subtitle" product="tablet" msgid="5158211121482010799">"Հավելյալ խամրեցումը կարող է օգնել, երբ. &lt;ol&gt; &lt;li&gt; Նվազագույն պայծառության ժամանակ պլանշետի էկրանը դեռ շատ պայծառ է։t&lt;/li&gt; &lt;li&gt; Դուք օգտագործում եք պլանշետը մթության մեջ, օրինակ, գիշերը կամ մութ սենյակում՝ քնելուց առաջ։&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="reduce_bright_colors_preference_intro_text" msgid="3502290826747650566">"Խամրեցրեք էկրանը՝ ավելի հարմար կարդալու համար"</string>
+    <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="8573408446901659333">"Հավելյալ խամրեցումը կարող է օգնել, երբ՝ &lt;ol&gt; &lt;li&gt; հեռախոսի էկրանի համար ընտրված է նվազագույն պայծառություն, բայց միևնույն է՝ շատ պայծառ է,&lt;/li&gt; &lt;li&gt;  հեռախոսն օգտագործում եք մթության մեջ, օրինակ՝ գիշերը կամ մութ սենյակում։&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="reduce_bright_colors_preference_subtitle" product="tablet" msgid="5158211121482010799">"Հավելյալ խամրեցումը կարող է օգնել, երբ՝ &lt;ol&gt; &lt;li&gt; պլանշետի էկրանի համար ընտրված է նվազագույն պայծառություն, բայց միևնույն է՝ շատ պայծառ է,&lt;/li&gt; &lt;li&gt; պլանշետն օգտագործում եք մթության մեջ, օրինակ՝ գիշերը կամ մութ սենյակում։&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="reduce_bright_colors_intensity_preference_title" msgid="7455443033955118267">"Ինտենսիվություն"</string>
     <string name="reduce_bright_colors_intensity_start_label" msgid="930387498396426039">"Ավելի խամրեցված"</string>
     <string name="reduce_bright_colors_intensity_end_label" msgid="1422600205484299860">"Ավելի պայծառ"</string>
@@ -3019,7 +3019,7 @@
     <string name="tts_install_voices_text" msgid="902408506519246362">"Ձայները տեղադրելու համար բացեք <xliff:g id="TTS_APP_NAME">%s</xliff:g> հավելվածը"</string>
     <string name="tts_install_voices_open" msgid="919034855418197668">"Բացել հավելվածը"</string>
     <string name="tts_install_voices_cancel" msgid="5179154684379560628">"Չեղարկել"</string>
-    <string name="tts_reset" msgid="9047681050813970031">"Վերակայել"</string>
+    <string name="tts_reset" msgid="9047681050813970031">"Զրոյացնել"</string>
     <string name="tts_play" msgid="2945513377250757221">"Նվագարկել"</string>
     <string name="vpn_settings_title" msgid="9131315656202257272">"VPN"</string>
     <string name="vpn_settings_insecure_single" msgid="9012504179995045195">"Անվտանգ չէ"</string>
@@ -4628,7 +4628,7 @@
     <string name="camera_gesture_desc" msgid="7557645057320805328">"Տեսախցիկի բացում դաստակի կրկնակի պտտման միջոցով"</string>
     <string name="camera_double_tap_power_gesture_title" msgid="8264757967127716261">"Տեսախցիկ - սնուցման կոճակի կրկնակի սեղմամբ"</string>
     <string name="camera_double_tap_power_gesture_desc" msgid="1539147023700755155">"Տեսախցիկի արագ բացում առանց էկրանը ապակողպելու"</string>
-    <string name="screen_zoom_title" msgid="6928045302654960559">"Ցուցադրման չափը"</string>
+    <string name="screen_zoom_title" msgid="6928045302654960559">"Ցուցադրման չափսը"</string>
     <string name="screen_zoom_short_summary" msgid="756254364808639194">"Տարրերի չափի փոփոխում"</string>
     <string name="screen_zoom_keywords" msgid="5964023524422386592">"ցուցադրման խտություն, էկրանի մասշտաբ, մասշտաբ, մասշտաբավորում"</string>
     <string name="screen_zoom_summary" msgid="1362984939045594989">"Մեծացրեք կամ փոքրացրեք էկրանին ցուցադրվող տարրերը։ Այս կարգավորումը փոխելուց հետո որոշ հավելվածներ կարող են փոխել իրենց դիրքը էկրանին։"</string>
@@ -5698,8 +5698,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Տեղադրության տվյալների հասանելիություն"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Հավելվածների և ծառայությունների համար"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Հավելվածների և ծառայությունների համար։ Եթե այս կարգավորումն անջատված է, տվյալները կարող են դեռ փոխանցվել, երբ զանգեք արտակարգ իրավիճակների որևէ հեռախոսահամարի։"</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Խաղերի կարգավորումներ"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Խաղային վահանակի դյուրանցման և այլ գործառույթների ակտիվացում"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Հետ"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Առաջ"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Գույնի նախադիտում"</string>
