--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -2335,7 +2335,7 @@
     <string name="accessibility_screen_magnification_navbar_title" msgid="480853328665484528">"바로가기를 사용하여 확대"</string>
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"바로가기 및 세 번 탭으로 확대"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"<xliff:g id="SERVICE">%1$s</xliff:g> 정보"</string>
-    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"표시 크기 및 텍스트"</string>
+    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"디스플레이 크기 및 텍스트"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"텍스트 표시 방식 변경"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"제목: 열기구 디자인"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"보낸 사람: 병수"</string>
@@ -2441,7 +2441,7 @@
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"색상 반전"</string>
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"색상 반전 사용"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"색상 반전 바로가기"</string>
-    <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"색상 반전은 밝은 색상을 어두운 색상으로 바꿉니다. 어두운 화면을 밝게 바꾸기도 합니다."</string>
+    <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"색상 반전은 밝은 색상을 어두운 색상으로, 어두운 색상을 밝은 색상으로 바꿉니다."</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;주의사항&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; 미디어 및 이미지에서 색상이 바뀝니다.&lt;/li&gt; &lt;li&gt; 색상 반전은 모든 앱에 적용됩니다.&lt;/li&gt; &lt;li&gt; 어두운 배경을 표시하려면 어두운 테마를 대신 사용하면 됩니다.&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"자동 클릭(포인터 정지 시간)"</string>
     <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"자동 클릭 정보(체류 시간)"</string>
@@ -2531,7 +2531,7 @@
     <string name="accessibility_shortcuts_settings_title" msgid="974740249671825145">"접근성 단축키"</string>
     <string name="enable_quick_setting" msgid="6648073323202243604">"빠른 설정에 표시"</string>
     <string name="daltonizer_mode_deuteranomaly_title" msgid="4210949400493358650">"빨간색과 초록색"</string>
-    <string name="daltonizer_mode_protanomaly_title" msgid="6392456967103014723">"적녹색약"</string>
+    <string name="daltonizer_mode_protanomaly_title" msgid="6392456967103014723">"빨간색과 초록색"</string>
     <string name="daltonizer_mode_tritanomaly_title" msgid="2278786218762602022">"파란색과 노란색"</string>
     <string name="daltonizer_mode_grayscale_title" msgid="152005391387952588">"그레이 스케일"</string>
     <string name="daltonizer_mode_deuteranomaly_summary" msgid="2117727423019598455">"녹색약"</string>
@@ -4959,7 +4959,7 @@
     <string name="keywords_one_handed" msgid="969440592493034101">"한 손 사용 가능 여부"</string>
     <string name="one_handed_mode_swipe_down_category" msgid="110178629274462484">"아래로 스와이프"</string>
     <string name="one_handed_mode_use_shortcut_category" msgid="1414714099339147711">"단축키 사용"</string>
-    <string name="one_handed_mode_intro_text" msgid="7921988617828924342">"화면 위쪽 절반까지 창 크기를 줄이면 한 손으로 작업하기가 쉬워집니다."</string>
+    <string name="one_handed_mode_intro_text" msgid="7921988617828924342">"화면 위쪽 절반을 아래로 내리면 한 손으로 작업하기가 쉬워집니다."</string>
     <string name="one_handed_mode_footer_text" msgid="6336209800330679840">" "<b>"한 손 사용 모드를 사용하는 방법"</b>\n" • 시스템 탐색 설정에서 동작 탐색이 선택되었는지 확인합니다.\n • 화면의 하단 가장자리 근처에서 아래로 스와이프합니다."</string>
     <string name="one_handed_action_pull_down_screen_title" msgid="9187194533815438150">"엄지가 닿는 영역으로 화면 크기 조정"</string>
     <string name="one_handed_action_pull_down_screen_summary" msgid="7582432473450036628">"화면 상단이 엄지가 닿을 수 있는 영역으로 이동합니다."</string>
@@ -5700,8 +5700,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"위치 정보 액세스"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"앱 및 서비스의 경우"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"앱 및 서비스에 적용. 설정이 꺼져 있어도 긴급 전화번호로 전화를 걸 때 마이크 데이터가 공유될 수 있습니다."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"게임 설정"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"게임 대시보드 바로가기 사용 설정 등"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"이전"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"다음"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"색상 미리보기"</string>
