--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -1077,7 +1077,7 @@
     <string name="wifi_subscription_summary" msgid="18802471063384598">"Prenumeratos peržiūra arba keitimas"</string>
     <string name="wifi_privacy_settings_ephemeral_summary" msgid="8502084692297249372">"Atsitikt. tv. pasir. MAC"</string>
     <string name="wifi_dpp_add_device_to_network" msgid="6141246783457722976">"Įrenginio pridėjimas"</string>
-    <string name="wifi_dpp_center_qr_code" msgid="5270782275746178104">"Centruokite toliau pateiktą QR kodą, kad galėtumėte pridėti įrenginį prie „<xliff:g id="SSID">%1$s</xliff:g>“"</string>
+    <string name="wifi_dpp_center_qr_code" msgid="5270782275746178104">"Nustatykite QR kodą centre, kad galėtumėte pridėti įrenginį prie „<xliff:g id="SSID">%1$s</xliff:g>“"</string>
     <string name="wifi_dpp_scan_qr_code" msgid="3543923817779444434">"QR kodo nuskaitymas"</string>
     <string name="wifi_dpp_scan_qr_code_join_network" msgid="969985020363459133">"Centruokite toliau pateiktą QR kodą, kad galėtumėte prisijungti prie „<xliff:g id="SSID">%1$s</xliff:g>“"</string>
     <string name="wifi_dpp_scan_qr_code_join_unknown_network" msgid="3180020429793614145">"Prisijunkite prie „Wi‑Fi“ nuskaitydami QR kodą"</string>
@@ -3924,7 +3924,7 @@
     <string name="work_ringtone_title" msgid="4810802758746102589">"Darbo telef. skambėjimo tonas"</string>
     <string name="work_notification_ringtone_title" msgid="2955312017013255515">"Numatytasis darbo pranešimo garsas"</string>
     <string name="work_alarm_ringtone_title" msgid="3369293796769537392">"Numatytasis darbo signalo garsas"</string>
-    <string name="work_sound_same_as_personal" msgid="1836913235401642334">"Tokie pat kaip asmeninio profilio"</string>
+    <string name="work_sound_same_as_personal" msgid="1836913235401642334">"Toks pat kaip asmeninio profilio"</string>
     <string name="work_sync_dialog_title" msgid="7810248132303515469">"Naudoti asmeninio profilio garsus?"</string>
     <string name="work_sync_dialog_yes" msgid="5785488304957707534">"Patvirtinti"</string>
     <string name="work_sync_dialog_message" msgid="5066178064994040223">"Darbo profilyje bus naudojami tokie pat garsai kaip asmeniniame profilyje"</string>
@@ -5876,8 +5876,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Prieiga prie vietovės"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Programos ir paslaugos"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Programos ir paslaugos. Jei šis nustatymas išjungtas, mikrofono duomenys vis tiek gali būti bendrinami, skambinant pagalbos numeriu."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Žaidimų nustatymai"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Įjunkite žaidimų informacijos suvestinės spartųjį klavišą ir kt."</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Ankstesnis"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Kitas"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Spalvos peržiūra"</string>
