--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -2383,14 +2383,14 @@
     <string name="accessibility_screen_magnification_navbar_title" msgid="480853328665484528">"Priblíženie skratkou"</string>
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"Priblíženie skratkou a trojitým klepnutím"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"<xliff:g id="SERVICE">%1$s</xliff:g>"</string>
-    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"Zobrazovaná veľkosť a text"</string>
+    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"Veľkosť zobrazenia a textu"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Zmeniť, ako sa text zobrazuje"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Predmet: Návrhy teplovzdušných balónov"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Od: Bill"</string>
     <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Dobré ráno,\n\nchcem sa spýtať, ako ste pokročili s požadovanými návrhmi. Budú k dispozícii, než začneme konštruovať nové balóny?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Resetovať nastavenia"</string>
-    <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Chcete resetovať veľkosť obrazovky a text?"</string>
-    <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Veľkosť obrazovky a predvoľby textu budú resetované na pôvodné nastavenia telefónu"</string>
+    <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Chcete resetovať veľkosť zobrazenia a textu?"</string>
+    <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Veľkosť zobrazenia a predvoľby textu budú resetované na pôvodné nastavenia telefónu"</string>
     <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"Resetovať"</string>
     <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"Máte nejaké plány na víkend?"</string>
     <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"Chystám sa na pláž. Chcete sa pridať?"</string>
@@ -5116,7 +5116,7 @@
     <string name="one_handed_mode_swipe_down_category" msgid="110178629274462484">"Potiahnutím nadol"</string>
     <string name="one_handed_mode_use_shortcut_category" msgid="1414714099339147711">"Použitie tejto skratky"</string>
     <string name="one_handed_mode_intro_text" msgid="7921988617828924342">"Potiahnite nadol hornú polovicu obrazovky, aby ste na ňu ľahšie dosiahli jednou rukou"</string>
-    <string name="one_handed_mode_footer_text" msgid="6336209800330679840">" "<b>"Ako používať režim jednej ruky"</b>\n" • Nezabudnite vybrať navigáciu gestami v nastaveniach navigácie v systéme\n • Potiahnite nadol pri dolnom okraji obrazovky"</string>
+    <string name="one_handed_mode_footer_text" msgid="6336209800330679840">" "<b>"Ako používať režim jednej ruky"</b>\n" • Nezabudnite v nastaveniach navigácie systému vybrať navigáciu gestami\n • Potiahnite nadol popri dolnom okraji obrazovky"</string>
     <string name="one_handed_action_pull_down_screen_title" msgid="9187194533815438150">"Potiahnuť obrazovku na dosah"</string>
     <string name="one_handed_action_pull_down_screen_summary" msgid="7582432473450036628">"Horná časť obrazovky sa presunie na dosah palca."</string>
     <string name="one_handed_action_show_notification_title" msgid="8789305491485437130">"Zobrazovať upozornenia"</string>
@@ -5878,8 +5878,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Prístup k polohe"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Pre aplikácie a služby"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Pre aplikácie a služby. Keď je toto nastavenie vypnuté a zavoláte na tiesňovú linku, môžu sa stále zdieľať údaje mikrofónu."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Nastavenia hier"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Zapnutie odkazu na hernom paneli a podobne"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Naspäť"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Ďalej"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Ukážka farby"</string>
