--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -968,7 +968,7 @@
     <string name="wifi_sap_no_channel_error" msgid="2126487622024749402">"Опсег од 5 GHz није доступан у овој земљи"</string>
     <string name="wifi_in_airplane_mode" msgid="1235412508135267981">"У Режиму рада у авиону"</string>
     <string name="wifi_notify_open_networks" msgid="2610323626246818961">"Обавести ме о јавним мрежама"</string>
-    <string name="wifi_notify_open_networks_summary" msgid="191058832201741013">"Обавести ме кад год је доступна јавна мрежа високог квалитета"</string>
+    <string name="wifi_notify_open_networks_summary" msgid="191058832201741013">"Обавештава вас кад год је доступна јавна мрежа високог квалитета"</string>
     <string name="wifi_wakeup" msgid="3834327315861781611">"Аутоматски укључи Wi‑Fi"</string>
     <string name="wifi_wakeup_summary" msgid="5778059083790221465">"WiFi ће се поново укључити у  близини сачуваних мрежа високог квалитета, као што је кућна мрежа"</string>
     <string name="wifi_wakeup_summary_no_location" msgid="681323616606485096">"Није доступно јер је локација искључена. Укључите "<annotation id="link">"локацију"</annotation>"."</string>
@@ -1060,7 +1060,7 @@
     <string name="wifi_subscription_summary" msgid="18802471063384598">"Прегледајте или промените претплату"</string>
     <string name="wifi_privacy_settings_ephemeral_summary" msgid="8502084692297249372">"Насумично изабрани MAC"</string>
     <string name="wifi_dpp_add_device_to_network" msgid="6141246783457722976">"Додајте уређај"</string>
-    <string name="wifi_dpp_center_qr_code" msgid="5270782275746178104">"Центрирајте QR кôд испод да бисте додали уређај на мрежу „<xliff:g id="SSID">%1$s</xliff:g>“"</string>
+    <string name="wifi_dpp_center_qr_code" msgid="5270782275746178104">"Центрирајте QR кôд испод да бисте додали уређај на мрежу <xliff:g id="SSID">%1$s</xliff:g>"</string>
     <string name="wifi_dpp_scan_qr_code" msgid="3543923817779444434">"Скенирајте QR кôд"</string>
     <string name="wifi_dpp_scan_qr_code_join_network" msgid="969985020363459133">"Поставите QR кôд у наставку да бисте додали уређај на мрежу „<xliff:g id="SSID">%1$s</xliff:g>“"</string>
     <string name="wifi_dpp_scan_qr_code_join_unknown_network" msgid="3180020429793614145">"Повежите се на Wi‑Fi мрежу тако што ћете скенирати QR кôд"</string>
@@ -2557,8 +2557,8 @@
     <string name="daltonizer_mode_protanomaly_title" msgid="6392456967103014723">"Црвено-зелено"</string>
     <string name="daltonizer_mode_tritanomaly_title" msgid="2278786218762602022">"Плаво-жуто"</string>
     <string name="daltonizer_mode_grayscale_title" msgid="152005391387952588">"Сивило"</string>
-    <string name="daltonizer_mode_deuteranomaly_summary" msgid="2117727423019598455">"делимично слепило за зелену, деутераномалија"</string>
-    <string name="daltonizer_mode_protanomaly_summary" msgid="4617032854982040748">"делимично слепило за црвену, протаномалија"</string>
+    <string name="daltonizer_mode_deuteranomaly_summary" msgid="2117727423019598455">"Делимично слепило за зелену, деутераномалија"</string>
+    <string name="daltonizer_mode_protanomaly_summary" msgid="4617032854982040748">"Делимично слепило за црвену, протаномалија"</string>
     <string name="daltonizer_mode_tritanomaly_summary" msgid="2428218320118180070">"Тританомалија"</string>
     <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"Додатно затамњено"</string>
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Додатно затамни екран"</string>
@@ -4954,7 +4954,7 @@
     <string name="dark_theme_slice_title" msgid="4684222119481114062">"Испробај Тамну тему"</string>
     <string name="dark_theme_slice_subtitle" msgid="5555724345330434268">"Помаже да продужите трајање батерије"</string>
     <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"Плочице програмера за брза подешавања"</string>
-    <string name="adb_authorization_timeout_title" msgid="6996844506783749754">"Онемогућите временско ограничење овлашћења adb-а"</string>
+    <string name="adb_authorization_timeout_title" msgid="6996844506783749754">"Онемогући временско ограничење овлашћења adb-а"</string>
     <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"Онемогућава аутоматско опозивање овлашћења adb-а за системе који се не повежу поново током подразумеваног временског периода (7 дана) или временског периода који конфигурише корисник (најмање 1 дан)."</string>
     <string name="winscope_trace_quick_settings_title" msgid="4104768565053226689">"Winscope траг"</string>
     <string name="sensors_off_quick_settings_title" msgid="8472151847125917167">"Сензори су искључени"</string>
@@ -4990,7 +4990,7 @@
     <string name="gesture_preference_summary" product="default" msgid="7941981260703379398">"Брзи покрети за контролу телефона"</string>
     <string name="gesture_preference_summary" product="tablet" msgid="4031666250963488007">"Брзи покрети за контролу таблета"</string>
     <string name="gesture_preference_summary" product="device" msgid="3520072325356373349">"Брзи покрети за контролу уређаја"</string>
-    <string name="double_tap_power_for_camera_title" msgid="7982364144330923683">"Брзо отварај камеру"</string>
+    <string name="double_tap_power_for_camera_title" msgid="7982364144330923683">"Брзо отварајте камеру"</string>
     <string name="double_tap_power_for_camera_summary" msgid="1100926048598415509">"Да бисте брзо отворили камеру, двапут притисните дугме за укључивање. Ово функционише на сваком екрану."</string>
     <string name="double_tap_power_for_camera_suggestion_title" msgid="4299496243418753571">"Брзо отворите камеру"</string>
     <string name="double_twist_for_camera_mode_title" msgid="472455236910935684">"Обрните камеру да бисте снимили селфи"</string>
@@ -5660,7 +5660,7 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Закуп никада не истиче."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Дозволи прекривање садржаја екрана Подешавања"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Апликације које могу да се приказују преко других апликација прекривају садржај екрана Подешавања"</string>
-    <string name="allow_mock_modem" msgid="3832264806530479214">"Дозволите лажни модем"</string>
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Дозволи лажни модем"</string>
     <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Желите ли да дозволите овом уређају да покрене услугу лажног модема за тест инструментације. Немојте омогућавати током нормалне употребе телефона"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Медији"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Закачи медија плејер"</string>
@@ -5713,7 +5713,7 @@
     <string name="default_active_sim_calls" msgid="2390973682556353558">"позиви"</string>
     <string name="default_active_sim_sms" msgid="8041498593025994921">"SMS"</string>
     <string name="default_active_sim_mobile_data" msgid="6798083892814045301">"мобилни подаци"</string>
-    <string name="wifi_scan_notify_message" msgid="4130641837826688879">"Ради бољег доживљаја уређаја, апликације и услуге могу и даље да траже WiFi мреже у било ком тренутку, чак и када је WiFi искључен. То може да се користи, на пример, за побољшавање функција и услуга заснованих на локацији. То можете да промените у подешавањима WiFi скенирања."<annotation id="link">"Промените"</annotation></string>
+    <string name="wifi_scan_notify_message" msgid="4130641837826688879">"Ради бољег доживљаја уређаја, апликације и услуге могу и даље да траже WiFi мреже у било ком тренутку, чак и када је WiFi искључен. То може да се користи, на пример, за побољшавање функција и услуга заснованих на локацији. То можете да промените у подешавањима WiFi скенирања. "<annotation id="link">"Промените"</annotation></string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Повезано"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Веза није успостављена"</string>
@@ -5787,8 +5787,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Приступ локацији"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"За апликације и услуге"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"За апликације и услуге. Ако је ово подешавање искључено, подаци микрофона могу и даље да се деле када позовете број за хитне случајеве."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Подешавања игара"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Укључите пречицу за контролну таблу игре и друго"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Претходна"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Следећа"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Преглед боје"</string>
