--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -2336,7 +2336,7 @@
     <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"ڈسپلے کا سائز اور ٹیکسٹ"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"ٹیکسٹ کے ڈسپلے کرنے کا طریقہ تبدیل کریں"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"موضوع: گرم ہوا کے غباروں کے ڈیزائنز"</string>
-    <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"فارم: بل"</string>
+    <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"منجانب: بِل"</string>
     <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"صبح بخیر!\n\nمیں صرف یہ دیکھنا چاہتا تھا کہ کیسے ڈیزائنز تیار ہو رہے ہیں۔ کیا وہ ہمارے نئے غبارے بنانا شروع کرنے سے پہلے تیار ہو جائیں گے؟"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"ترتیبات کو ری سیٹ کریں"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"ڈسپلے کا سائز اور ٹیکسٹ کو ری سیٹ کریں؟"</string>
@@ -5698,8 +5698,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"مقام تک رسائی"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"ایپس اور سروسز کے لیے"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"ایپس اور سروسز کے لیے۔ اگر یہ ترتیب آف ہو تو آپ کے ایمرجنسی نمبر پر کال کرتے وقت بھی مائیکروفون کے ڈیٹا کا اشتراک کیا جا سکتا ہے۔"</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"گیم کی ترتیبات"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"گیم ڈیش بورڈ شارٹ کٹ اور مزید آن کریں"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"پچھلا"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"اگلا"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"رنگ کا پیش منظر"</string>
